tests/lean/rewrite_fail.lean.expected.out
rewrite_fail.lean:5:15: error:invalid 'rewrite' tactic, rewrite step failed using pattern
  a
no subterm in the goal matched the pattern
proof state:
a b : ℕ,
Ha : a = 0,
Hb : b = 0
⊢ 0 + b = 0
rewrite_fail.lean:6:0: error: don't know how to synthesize placeholder
a b : ℕ,
Ha : a = 0,
Hb : b = 0
⊢ a + b = 0
rewrite_fail.lean:6:0: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
rewrite_fail.lean:11:2: error:invalid tactic, there are no goals to be solved
proof state:
no goals
rewrite_fail.lean:12:0: error: don't know how to synthesize placeholder
a : ℕ
⊢ a = a
rewrite_fail.lean:12:0: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
